// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse example.mgsdl 1`] = `
{
  "enums": {
    "UserStatus": {
      "values": [
        "Pending",
        "Active",
        "Inactive",
      ],
    },
  },
  "models": {
    "Project": {
      "schema": {
        "creator": {
          "dataType": {
            "refModel": "User",
            "type": "ObjectId",
          },
          "isImmutable": false,
          "isIndex": true,
          "isRequired": true,
          "isUnique": false,
        },
        "details": {
          "dataType": {
            "refSchema": "ProjectDetails",
            "type": "Schema",
          },
          "isImmutable": false,
          "isIndex": false,
          "isRequired": true,
          "isUnique": false,
        },
        "detailsByUserId": {
          "dataType": {
            "elementRequired": true,
            "elementType": {
              "refSchema": "ProjectDetails",
              "type": "Schema",
            },
            "type": "Map",
          },
          "isImmutable": true,
          "isIndex": false,
          "isRequired": false,
          "isUnique": false,
        },
        "lastAccessedByUserId": {
          "dataType": {
            "elementRequired": false,
            "elementType": {
              "type": "String",
            },
            "type": "Map",
          },
          "isImmutable": false,
          "isIndex": false,
          "isRequired": true,
          "isUnique": false,
        },
      },
    },
    "User": {
      "schema": {
        "email": {
          "dataType": {
            "type": "String",
          },
          "isImmutable": false,
          "isIndex": true,
          "isRequired": true,
          "isUnique": true,
        },
        "name": {
          "dataType": {
            "type": "String",
          },
          "isImmutable": false,
          "isIndex": false,
          "isRequired": false,
          "isUnique": false,
        },
        "status": {
          "dataType": {
            "refEnum": "UserStatus",
            "type": "Enum",
          },
          "isImmutable": false,
          "isIndex": false,
          "isRequired": true,
          "isUnique": false,
        },
      },
    },
  },
  "schemas": {
    "ProjectDetails": {
      "alternateNames": {
        "dataType": {
          "elementRequired": true,
          "elementType": {
            "type": "String",
          },
          "type": "Array",
        },
        "isImmutable": false,
        "isIndex": false,
        "isRequired": true,
        "isUnique": false,
      },
      "isActive": {
        "dataType": {
          "type": "Boolean",
        },
        "isImmutable": true,
        "isIndex": false,
        "isRequired": true,
        "isUnique": false,
      },
      "name": {
        "dataType": {
          "type": "String",
        },
        "isImmutable": false,
        "isIndex": false,
        "isRequired": true,
        "isUnique": false,
      },
      "number": {
        "dataType": {
          "type": "Number",
        },
        "isImmutable": false,
        "isIndex": false,
        "isRequired": false,
        "isUnique": true,
      },
      "startDate": {
        "dataType": {
          "type": "Date",
        },
        "isImmutable": false,
        "isIndex": false,
        "isRequired": false,
        "isUnique": false,
      },
    },
  },
}
`;

exports[`parse invalid cases 1`] = `
[Error: Unexpected syntax near:
bah]
`;

exports[`parse invalid cases 2`] = `
[Error: Unexpected syntax near:
bah]
`;

exports[`parse invalid cases 3`] = `
[Error: Unexpected syntax near:
unknown UserStatus {
  Pending
  Active
  Inactive
}]
`;

exports[`parse invalid cases 4`] = `
[Error: Unexpected syntax near:
enum UserStatus
  Pending
  Active
  Inactive
}]
`;

exports[`parse invalid cases 5`] = `
[Error: Unexpected syntax near:
//]
`;

exports[`parse invalid cases 6`] = `[Error: Unknown directives: unknown]`;

exports[`parse invalid cases 7`] = `[Error: Field email has unknown type Unknown]`;

exports[`parse invalid cases 8`] = `
[Error: Unexpected syntax near:
name String]
`;
